--- a/.github/workflows/ValidationName.yml
+++ b/.github/workflows/ValidationName.yml
@@ -1,5 +1,7 @@
 name: "Validate Branch Name"
 description: "Ensure that a branch name conforms to a specific pattern"
+on: push
+
 branding:
   icon: "git-branch"
   color: "purple"
