--- a/.github/workflows/ValidationName.yml
+++ b/.github/workflows/ValidationName.yml
@@ -1,15 +1,10 @@
-name: "Validate Branch Name"
-description: "Ensure that a branch name conforms to a specific pattern"
-on: push
-
-branding:
-  icon: "git-branch"
-  color: "purple"
-inputs:
-  pattern:
-    description: "Regex pattern that the branch name should match"
-    required: true
-    default: "[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30}"
-runs:
-  using: "node12"
-  main: "dist/index.js"
+name: learn-github-actions
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
+jobs:
+  check-bats-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: goshencollege/validate-branch-name@v1.0.1
+        with:
+          pattern: "\/[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30}"
