--- a/.github/workflows/ValidationName.yml
+++ b/.github/workflows/ValidationName.yml
@@ -1,10 +1,12 @@
-name: learn-github-actions
+name: branch-validator
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on:
+  - push
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
       - uses: goshencollege/validate-branch-name@v1.0.1
         with:
-          pattern: "\/[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30}"
+          pattern: "[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30}"
+
