--- a/.github/workflows/ValidationName.yml
+++ b/.github/workflows/ValidationName.yml
@@ -1,13 +1,9 @@
 name: branch-validator
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
-  label:
-    types:
-      - created
-  push:
-    branches:
-      - master
-      - develop
+  create:
+    branch:
+      - "(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
   page_build:
 
 jobs:
