--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -1,7 +1,7 @@
 name: branch-validator
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
-  push:
+  create:
     branches:
       - "(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
 
