--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -6,18 +6,19 @@ on:
       - develop
 jobs:
   check_pr:
-    runs-on: ubuntu-latest
-
+    runs-on: checkBranchValidator
     steps:
+      - name: say hello to the world
+        run: echo "hello, world!"
       - name: Cheking branch name
         run: |
           branch_name=${GITHUB_HEAD_REF}
           echo "pr branch name: $branch_name"
-          
+
           target_branch=${GITHUB_BASE_REF}
           echo "target branch: $target_branch"
           regex="(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
-          
+
           if [[ "$branch_name" =~ $regex ]]; then
             echo "Branch name matches the  regex pattern."
             if [[ "$target_branch" != "regex" ]]; then
