--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -12,11 +12,9 @@ jobs:
         run: echo "hello, world!"
       - name: Cheking branch name
         run: |
-          branch_name=${GITHUB_HEAD_REF}
+          branch_name=${{ github.ref }}"
           echo "pr branch name: $branch_name"
 
-          target_branch=${GITHUB_BASE_REF}
-          echo "target branch: $target_branch"
           regex="(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
 
           if [[ "$branch_name" =~ $regex ]]; then
