--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Cheking branch name
         run: |
           branch_name=${{ github.ref }}"
-          echo "pr branch name: $branch_name"
-          regex="^(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
-          if [[ "$branch_name" =~ $regex ]]; then
+          echo "branch name: $branch_name"
+          
+          if [[ "$branch_name" =~ $branch_name ]]; then
             echo "Branch name matches the  regex pattern."
             if [[ "$target_branch" != "regex" ]]; then
               echo "but doesn't match target branch"
