--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -14,9 +14,10 @@ jobs:
         run: |
           branch_name=${{ github.ref }}"
           echo "branch name: $branch_name"
-          
           if [[ $branch_name =~ $branch_name ]]; then
             echo "correct branch name"
+          else
+            echo "Branch name does not match any regex. Exiting..."
             exit 1
-            fi
+          fi
         shell: bash
