--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -14,7 +14,8 @@ jobs:
         run: |
           branch_name=${{ github.ref }}"
           echo "branch name: $branch_name"
-          if [[ $branch_name =~ $branch_name ]]; then
+          if [ $branch_name =~ $branch_name ]
+          then
             echo "correct branch name"
           else
             echo "Branch name does not match any regex. Exiting..."
