--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -14,7 +14,8 @@ jobs:
         run: |
           branch_name=${{ github.ref }}
           echo "branch name: $branch_name"
-          if [ $branch_name =~ $branch_name ]
+          regex="^(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
+          if [ "$branch_name" =~ $regex ]
           then
             echo "correct branch name"
           else
