--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -12,7 +12,7 @@ jobs:
         run: echo "hello, world!"
       - name: Cheking branch name
         run: |
-          branch_name=${{ github.ref }}
+          branch_name=${{ github.ref_name }}
           echo "branch name: $branch_name"
           regex="(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
           if [["$branch_name" =~ $regex ]];
