--- a/.github/workflows/validation2.yml
+++ b/.github/workflows/validation2.yml
@@ -15,7 +15,9 @@ jobs:
           branch_name=${{ github.ref_name }}
           echo "branch name: $branch_name"
           regex="(master|develop|[A-Z]{4,5}-[0-9]{4,5}-[A-Za-z]{5,30})"
-          if [["$branch_name" =~ $regex ]];
+          echo "regrex validotir: $regrex"
+          echo "is equal $branch_name =~ $regex"
+          if ["$branch_name" =~ $regex ]
           then
             echo "correct branch name";
           else
